--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 							<header>
 								<h2 class="alt">Hello! I'm <strong>Eduardo</strong></h2>
-								<p>Data Analyst with experience with SQL, Python and with data visualizations tools such as Power BI, Tableau and Looker<br />
+								<p>Data Analyst with experience on SQL, Python, and with data visualizations tools such as Power BI, Tableau and Looker<br />
 								</p>
 							</header>
 
@@ -142,8 +142,11 @@
 
 							<!-- <a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a> -->
 
-							<p>Economist based in Brazil, been working with analytics for close to 3 years, having experience in the 
-								<thead>in the automotive and tech industries. Check out my Linkedin, Github, and email using the icons in the bottom left of the page.</thead></p>
+							<p>Economist based in Brazil, been working with analytics for close to 3 years, with experience on the 
+								<thead>automotive and tech industries. Will keep adding more of my projects as long as my cat and dog allow me to.<br>
+									<br>
+									
+									Check out my Linkedin and Github pages by clicking the icons in the bottom left of the page.</thead></p>
 
 						</div>
 					</section>
@@ -184,7 +187,8 @@
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; tms. All rights reserved.</li><li>
+							
 					</ul>
 
 			</div>
