--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 									<article class="item">
 										<a href="https://github.com/edutms/nba-api_data" target="_blank" rel="noopener noreferrer" class="image fit"><img src="images/nba_api.jpg" alt="" /></a>
 										<header>
-											<h3>NBA data with Python and MySQL</h3>
+											<h3>ETL of NBA data with Python and MySQL</h3>
 										</header>
 									</article>
 									<!-- <article class="item">
@@ -103,7 +103,7 @@
 									<article class="item">
 										<a href="https://app.powerbi.com/view?r=eyJrIjoiODJmNTU3ZWYtMmVlNi00NzU4LTljZDYtYWQxYmQ4ZjAwY2ZmIiwidCI6IjQwOTRjMTVhLTA1YTQtNDNkZC04YTdhLWYyODhiNWZiYjJhYiJ9&pageName=ReportSection" target="_blank" rel="noopener noreferrer" class="image fit"><img src="images/shooting_pic.png" alt="" /></a>
 										<header>
-											<h3>2021-22 NBA shooting dashboard</h3>
+											<h3>Power BI - 2021-22 NBA shooting dashboard</h3>
 										</header>
 									</article>
 									<!-- <article class="item">
