--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://app.powerbi.com/view?r=eyJrIjoiODJmNTU3ZWYtMmVlNi00NzU4LTljZDYtYWQxYmQ4ZjAwY2ZmIiwidCI6IjQwOTRjMTVhLTA1YTQtNDNkZC04YTdhLWYyODhiNWZiYjJhYiJ9&pageName=ReportSection" target="_blank" rel="noopener noreferrer" class="image fit"><img src="images/shooting_pic.png" alt="" /></a>
+										<a href="https://app.powerbi.com/view?r=eyJrIjoiODJmNTU3ZWYtMmVlNi00NzU4LTljZDYtYWQxYmQ4ZjAwY2ZmIiwidCI6IjQwOTRjMTVhLTA1YTQtNDNkZC04YTdhLWYyODhiNWZiYjJhYiJ9" target="_blank" rel="noopener noreferrer" class="image fit"><img src="images/shooting_pic.png" alt="" /></a>
 										<header>
 											<h3>Power BI - 2021-22 NBA shooting dashboard</h3>
 										</header>
